2009-05-13  Claudio Saavedra  <csaavedra@igalia.com>

	* tests/Makefile.am: Include top_srcdir to make possible to build
	tests in a different builddir.
	* tests/*.c: Include <hildon/hildon-*.h> to allow building tests
	on a different builddir.

2009-05-12  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-touch-selector.c (disconnect_model_handlers),
	(hildon_touch_selector_remove): Disconnect model's signal handler
	on column removal.

	Fixes: NB#116289 (Hildon home crashes while adding task
	shortcuts.)

2009-05-11  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-button.c
	(hildon_button_set_title, hildon_button_set_value):
	Hide labels containing an empty string.

2009-05-11  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump
	* debian/changelog: post release version bump

2009-05-11  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.72]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-05-08  Alejandro Pinheiro <apinheiro@igalia.com>

	* hildon/hildon-note-private.h: Removed sound_signal_handler
	* hildon/hildon-note.c
	(on_show_cb): new callback on note "show" event, this simply adds
	a idle, with the function sound_handling
	(sound_handling): removed the sound_signal_handler management
	(hildon_note_init): connect note "show" event to on_show_cb
	(hildon_note_realize): remove the connection to "expose-event"

	Fixes: NB#115242 (Sound is not played every time for the 'Switch off
	device?' confirmation note)

2009-05-08  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-note.c
	(hildon_note_new_information_with_icon_name)
	(hildon_note_new_confirmation_with_icon_name):
	Terminate the list of parameters in g_object_set() calls

	Fixes: NB#115166 (Formatting memory card is not taking place)

2009-05-08  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-sound.c (hildon_play_system_sound): Set the
	"dialog-information" role for the sound being played.
