@@ -14,7 +14,7 @@ Description: Hildon libraries development files
 Package: libhildon1
 Section: libs
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, osso-sounds-ui, hildon-libs-l10n-mr | hildon-libs-l10n-mr0, osso-system-lock-l10n-mr | osso-system-lock-l10n-mr0
+Depends: ${shlibs:Depends}, ${misc:Depends}, osso-sounds-ui, hildon-libs-l10n-mr | hildon-libs-l10n-mr0, osso-system-lock-l10n-mr | osso-system-lock-l10n-mr0, osso-filemanager-l10n-mr | osso-filemanager-l10n-mr0
 Description: Hildon libraries
 
 Package: libhildon1-dbg
